tests/ui/keyword/keyword-false-as-identifier.stderr
error[E0308]: mismatched types
  --> $DIR/keyword-false-as-identifier.rs:2:9
   |
LL |     let false = 22;
   |         ^^^^^   -- this expression has type `{integer}`
   |         |
   |         expected integer, found `bool`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
