tests/ui/keyword/keyword-false-as-identifier.rs
fn main() {
    let false = 22; //~ error: mismatched types
}
